--- a/client/main.css
+++ b/client/main.css
@@ -2,8 +2,8 @@
 body {
   font-family: sans-serif;
   background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
-  background-attachment: fixed;
+
+  padding-top: 50px;
 
   position: absolute;
   top: 0;
@@ -11,7 +11,6 @@ body {
   left: 0;
   right: 0;
 
-  padding: 0;
   margin: 0;
 
   font-size: 14px;
@@ -78,7 +77,11 @@ ul {
   position: relative;
 }
 
-li {
+.navbar-right li {
+    padding-right: 15px;
+}
+
+.container li {
   position: relative;
   list-style: none;
   padding: 15px;
